--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou"
+      href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
     <link
