--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
+    <script src="https://apis.google.com/js/api.js"></script>
     <title>React App</title>
   </head>
   <body>
